--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.19.2",
-    "mongoose": "^8.3.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.3.3",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
